[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "FGPS"
version = "0.0.1"
authors = [
    { name = "Xiaokai Zhang", email = "xiaokaizhang1999@163.com" },
]
description = "Formal geometric problem solver based on FormalGeo."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "formalgeo>=0.0.2",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0"
]
[project.urls]
"Homepage" = "https://github.com/BitSecret/FGPS"
"Bug Tracker" = "https://github.com/BitSecret/FGPS/issues"